--- a/index.html
+++ b/index.html
@@ -1,30 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Welcome to nginx!</title>
-<style>
-    body {
-        width: 35em;
-        margin: 0 auto;
-        font-family: Tahoma, Verdana, Arial, sans-serif;
-    }
-</style>
-</head>
 <body>
-<h1>Welcome to nginx!</h1>
-<p>If you see this page, the nginx web server is successfully installed and
-working. Further configuration is required.</p>
-
-<p>For online documentation and support please refer to
-<a href="http://nginx.org/">nginx.org</a>.<br/>
-Commercial support is available at
-<a href="http://nginx.com/">nginx.com</a>.</p>
-
-<p><em>Thank you for using nginx.</em></p>
-<br>
-<p><em>DEBUG - Hostname: server_hostname</em></p>
-<p><em>DEBUG - IP Address: server_address</em></p>
-<p><em>DEBUG - Date: server_date</em></p>
-<p><em>DEBUG - URL: server_url</em></p>
+<p><em>Hostname: server_hostname</em></p>
+<p><em>IP Address: server_address</em></p>
+<p><em>URL: server_url</em></p>
+<p><em>Request Method: request_method</em></p>
+<p><em>Request ID: request_id</em></p>
 </body>
 </html>
